--- a/views/community.ejs
+++ b/views/community.ejs
@@ -8,7 +8,7 @@
 <section id = 'news' class= 'container'>
   <h1 class = 'my-5'>한발 빠르게 받아보는 소식</h1>
 </section>
-<section id = 'investment' class = 'bg-dark'>
+<section id = 'investment' class = 'bg-light'>
 
 <table class="ui very basic table">
   <thead>
@@ -46,8 +46,33 @@
 
   <div class = 'row'>
     <div class = 'col'>
-      <div class = 'col-12'>cnai.ai</div>
-      <div class = 'col-12'>cn.table</div>
+      <div class = 'col-12'>
+
+        <div class="d-flex position-relative">
+          <!-- https://icons.getbootstrap.com/icons/arrow-right-circle/ -->
+          <div>
+            <h5 class="mt-0">Instagram</h5>
+            <p class = 'mt-5'>cnai.ai</p>
+            <a href="#" class="stretched-link"><i class="bi bi-arrow-right-circle"></i></a>
+          </div>
+          <img src="/img/1.jpeg" class="flex-shrink-0 me-3" alt="...">
+        </div>
+
+
+      </div>
+      <div class = 'col-12'>
+        <div class="row g-0 bg-light position-relative">
+     
+        <div class="col-md-6 p-4 ps-md-0">
+          <h5 class="mt-0">Instagram</h5>
+          <p>cn.table</p>
+          <a href="#" class="stretched-link"><i class="bi bi-arrow-right-circle"></i></a>
+        </div>
+        <div class="col-md-6 mb-md-0 p-md-4">
+          <img src="..." class="w-100" alt="...">
+        </div>
+      </div>
+    </div>
     </div>
     <div class = 'col'>Tech blog</div>
     <div class = 'col'>CNAI</div>
