--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -52,6 +52,20 @@
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+<!-- slider -->
+<script src  ='https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.min.js'></script>
+<link href = 'https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/css/splide-core.min.css' rel = 'stylesheet'>
+
+
+<!-- https://swiperjs.com/demos -->
+
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
+
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics 구버전 -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177404550-1"></script>
   <script>
