--- a/views/partials/_header_dark.ejs
+++ b/views/partials/_header_dark.ejs
@@ -8,7 +8,7 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/company" class="nav-link px-2 text-secondary">COMPANY</a></li>
         <li><a href="/community" class="nav-link px-2 text-white">COMMUNITY</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">CAREER</a></li>
+        <li><a href="/career" class="nav-link px-2 text-white">CAREER</a></li>
       </ul>
 
 
