--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -22,8 +22,22 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
+
+<!-- https://swiperjs.com/demos -->
+   <!-- Link Swiper's CSS -->
+   <link
+   rel="stylesheet"
+   href="https://unpkg.com/swiper/swiper-bundle.min.css"
+ />
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
+
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
   <!-- Semantic UI for Dropdown -->
 
@@ -52,19 +66,7 @@
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<!-- slider -->
-<script src  ='https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.min.js'></script>
-<link href = 'https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/css/splide-core.min.css' rel = 'stylesheet'>
 
-
-<!-- https://swiperjs.com/demos -->
-
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-/>
-
-<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics 구버전 -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177404550-1"></script>
