--- a/views/partials/_header_dark.ejs
+++ b/views/partials/_header_dark.ejs
@@ -5,15 +5,15 @@
         <img class = "logo" src="./img/common/favicon.ico" width = "15%"> CNAI
       </a>
 
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-7 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/company" class="nav-link px-2 text-secondary">COMPANY</a></li>
         <li><a href="/community" class="nav-link px-2 text-white">COMMUNITY</a></li>
         <li><a href="/career" class="nav-link px-2 text-white">CAREER</a></li>
       </ul>
 
 
-      <div class="text-end">
-        <a><i class="globe icon"></i></a>
+      <div class="">
+        <a href = '/en' ><i class="globe icon" class = 'mx-5'></i></a>
         <button type="button" class="btn btn-outline-light me-2">CONTACT US</button>
       </div>
     </div>
