--- a/views/partials/_footer_dark.ejs
+++ b/views/partials/_footer_dark.ejs
@@ -82,8 +82,9 @@
    </script>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.js"></script>
+  <script src="script.js"></script>
 
 
 </body>
