simply scroll added, liveloading like React added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,52 +1,10 @@
 <%- include('partials/head'); -%>
 
-<header class="bg-dark Gray_5 menu py-2">
 
-
-
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">
-        <img class = "logo" src="./img/common/CNAI(white).png" width = "70px">
-      </a>
-
-      <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 " id = 'gnb-dark'>
-        <li class="my-auto px-5"><a href="/company" class="nav-link px-2 Gray_5 hover-underline-animation">COMPANY</a></li>
-        
-          <div class="ui compact menu my-auto pr-5" style="
-          background: none;
-      ">
-            <div class="ui simple dropdown item Gray_5" id = 'moveArrow'>
-         COMMUNITY
-         <i class="angle down icon" id = 'myArrow'></i>
-              <div class="menu">
-                <div class="item"><a href = '/community'>Publications</a></div>
-                <div class="item">Tech Blog<i class="external alternate icon"></i></div>
-           
-              </div>
-            </div>
-          </div>
-        
-        
-        
-        
-        <li class = 'my-auto'><a href="/career" class="nav-link px-2 text-white">CAREER</a></li>
-        </div>
-
-
-      <div class="text-end">
-        <a href = '/en' class  = 'nav-link hover-underline-animation'><i class="globe icon px-5 text-white"></i></a>
-        <button type="button" class="btn btn-outline-light me-2 ">CONTACT US</button>
-      </div>
-    </div>
-  </div>
-</header>
 
 
     <div class="container col-8 mt-4" data-bs-spy="scroll" data-bs-target="#myScroll" data-bs-offset="50">
 
-
- 
       <section class="py-5 text-center container mt-5 masthead " style = "height: 100vh">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
@@ -164,6 +122,25 @@
 
       </section>
     </div>
+
+    <section id = 'partners'>
+      <div class = 'container'>
+      <h5>Our Partners </h5>
+       <h3>CN.AI의 성장과 함께하는 파트너사</h3> 
+      </div>
+    
+      <div class="simply-scroll simply-scroll-container"><div class="simply-scroll-clip"><ul id="scroller" class="simply-scroll-list" style="width: 2320px;">
+        <li><img src="img/1.jpeg" width="290" height="200" alt="Firehouse"></li>
+        <li><img src="img/1.jpeg" width="290" height="200" alt="Chloe nightclub"></li>
+        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080513_VPJWVQRW_tb.jpg" width="290" height="200" alt="Firehouse bar"></li>
+        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080514_B1YJ08B6_tb.jpg" width="290" height="200" alt="Firehouse chloe club fishtank"></li>
+        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080514_JYW68XPT_tb.jpg" width="290" height="200" alt="Firehouse restaurant"></li>
+        <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080608_38CG51J2_tb.jpg" width="290" height="200" alt="Firehouse"></li>
+    <li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080608_9N3H5GYL_tb.jpg" width="290" height="200" alt="Firehouse"></li><li><img src="http://logicbox.net/jquery/simplyscroll/assets/20080513_4D3SD1BQ_tb.jpg" width="290" height="200" alt="Chloe nightclub"></li></ul></div></div>
+
+    </section>
+
+
 
   <%- include('partials/_footer_dark'); -%>
 
