--- a/views/community.html
+++ b/views/community.html
@@ -1,4 +1,7 @@
-<%- include('partials/head'); -%>
+{% extends 'base.html' %}
+
+{% block content %}
+
 <section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style="height: 100vh">
   <div style="margin-top: 40vh;" data-aos="fade-up">
       <h1>CN.AI의 소식을 알려드립니다.</h1>    
@@ -15,7 +18,7 @@
     <tr>
       <th>Name</th>
       <th>Status</th>
-      <th>Notes</th>
+      <th>Noll;;tes</th>
     </tr>
   </thead>
   <tbody>
@@ -90,4 +93,5 @@
   </section>
 </section>
 
-  <%- include('partials/_footer_dark'); -%>
+ 
+  {% endblock %}
