--- a/views/company.html
+++ b/views/company.html
@@ -34,9 +34,12 @@
         object-fit: cover;
       }
 
+      #mediaKit{
+        background:  linear-gradient(180deg, rgba(255, 255, 255, 0) 82.97%, #FFFFFF 95.16%, #FFFFFF 109.27%), linear-gradient(147.1deg, rgba(126, 83, 255, 0.2) 5.67%, rgba(126, 83, 255, 0) 52.89%), #F8FAFF; 
+        transform: rotate(-180deg);
 </style>
 
-<section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style="height: 100vh">
+<section class="py-5 text-center container-flujid mb-5 bg-dark text-light" style="height: 100vh ;">
   <div style="margin-top: 40vh;" data-aos="fade-up">
     <h1>합성 데이터로 새로운 패러다임을 만듭니다.</h1>
   </div>
@@ -319,60 +322,104 @@
   <div class='col-4 text-center position-relative text-white'>
   <p class = 'SubTitle_1 mt-5 '>Our Story</p>
   <p class = 'position-absolute start-50 translate-middle-x Title_2_eng' style = 'bottom:7vh;'>More   
-    <button class = 'ui icon button ' id = 'goYoutube'><span class= 'ms-3'><i class="bi bi-arrow-right-circle"></i></span></button>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      Launch demo modal
-    </button>
-    
-
-
+    <button type="button" class="circular ui icon button bg-transparent" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <span class= 'ms-3'><i class="bi bi-arrow-right-circle"></i></span>
+    </button>  
   </p>
-
-  <button class="ui button yellow create_btn" type="button" id="test">Create</button>
 </div>
   <div class='col-8'>
     <img src="/img/1.jpeg" class="img-fluid w-100" alt="...">
   </div>
 </section>
-
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content bg-transparent border-0">
+      <button type="button" class="position-absolute top-0 start-100 translate-middle bg-white circular ui icon button" data-bs-dismiss="modal" aria-label="Close"><i class="times circle outline icon"></i></button>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/8x1K-UDeTac?autoplay=1&cc_load_policy=1&mute=1" 
+       frameborder="0" allow="accelerometer; autoplay;"></iframe>
     </div>
   </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+
+<div class="card rounded-0 border-0">
+  <section id = 'mediaKit' class = 'card-img' style = ' height: 400vh'>
+</section>
+
+  <div class="card-img-overlay p-0">
+
+    <section class = 'offset-lg-5' style="margin-top: 30vh">
+    <p class = 'SubTitle_1 Gray_1'>
+Media Kit
+</p>
+<div class="ui special cards">
+  <div class="card" style="
+    height: fit-content;
+">
+    <div class="blurring dimmable image">
+      <div class="ui dimmer">
+        <div class="content">
+          <div class="center">
+            <div class="ui inverted button">A TYPE 다운로드</div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      <img src="/img/1.jpeg">
     </div>
+  
+  </div>
+  <div class="card" style="
+    height: fit-content;
+">
+    <div class="blurring dimmable image">
+      <div class="ui dimmer">
+        <div class="content">
+          <div class="center">
+            <div class="ui inverted button">B TYPE 다운로드</div>
+          </div>
+        </div>
+      </div>
+      <img src="/img/1.jpeg">
+    </div>
+  
   </div>
 </div>
+
+<p class = 'Title_2_eng Gray_0 my-5'>Company Identity</p>
+<p class= 'Body_2 Gray_1'>
+  사명의 의미인 ‘Change New Code’의 CN을 
+심플하게 형상화한 심볼과 로고타입 A, B TYPE입니다. 
+  </p>
+
+  <div class = 'ui button'>C.I 다운로드</div>
+
+</section>
+
+<img src = 'img/1.jpeg' class = 'w-100'>
+<div class = 'offset-lg-5 bg-white' style = 'margin-top: -3vh'>
+  <p class = 'SubTitle_1 Gray_2'>Contact</p>
+  <p class = 'Title_1'>CN.AI에게 궁금한 점이 있다면, <br />
+언제든 문의 남겨주세요!</p>
+<div class = 'row'>
+  <div class = 'col'>CN.AI Seoul</div>
+  <div class = 'col'>서울 성동구 연무장5가길 7 현대테라스타워 507호
+성수역 도보 5분</div>
+  </div>  
+  <div class = 'row'>
+  <div class = 'col'>CN.AI Dajeon</div>
+  <div class = 'col'>대전광역시 중구 중앙로 101 대전창업허브 4F
+중구청역 도보 3분</div>
+  </div>  
+  </div>
+
+
+  </div>
+</div>
+
+
+
 
 
 
@@ -406,6 +453,11 @@ let welfare = new Swiper(".ourWelfare", {
          prevEl: ".welfare-prev",
        },
 
+});
+
+
+$('.special.cards .image').dimmer({
+  on: 'hover'
 });
 </script>
 
